DevTools: Fix timeline overview selection window alignment.
BUG=241782
R=loislo@chromium.org

Review URL: https://codereview.chromium.org/15297010

git-svn-id: svn://svn.chromium.org/blink/trunk@154028 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/inspectorCommon.css
+++ b/front_end/inspectorCommon.css
@@ -189,8 +189,8 @@ iframe.view {
     top: 0;
     height: 20px;
     width: 5px;
-    margin-left: -3px;
-    margin-right: -2px;
+    margin-left: -2px;
+    margin-right: -3px;
     background-color: rgb(153, 153, 153);
     z-index: 500;
     border-radius: 2px;
@@ -199,6 +199,11 @@ iframe.view {
 
 .resize-enabled .overview-grid-window-resizer {
     cursor: ew-resize;
+}
+
+.overview-grid-window-resizer-right {
+    margin-left: -3px;
+    margin-right: -2px;
 }
 
 /* Network timing is shared between popover and network item view pane */
